--- a/styles/mdhl.css
+++ b/styles/mdhl.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -14,51 +15,69 @@ body{
     margin: 25px 25px 10px 22px;
 }
 
-
-.container-log-tit{
-    background: linear-gradient( rgb(204 207 227 / 27%), rgb(89 88 202 / 50%)) , url("../assets/design1_image2.jpg");
-    background-repeat: no-repeat;
+.hero-gradient{
+    position: absolute;
+ 
+    background: linear-gradient(179deg, rgba(0, 0, 0, 0.404), rgba(0, 0, 0, 0.856));
+ 
+    width: 100%;
+    height: 100%;
+    animation-name: presentation ;
+    animation-duration: 3s;
+}
+.container-header{
+    background-image:  url(../assets/design1_image2.jpg);
+  background-repeat: no-repeat;
     background-position: center ;
-    height: 65vh;
+
+
+    
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 10px 15px -4px rgb(0 0 0 / 57%);
-
+    animation-name: movingGradient;
+    animation-duration: 4s;
 }
-.container-log-tit h1{
+
+.container-title-nav h1{
+    position: relative;
+    width: 55%;
     font-size: 50px;
+   /* top: 40%;
+    left: 25%;*/
     color: white;
 
+
 }
-div > a{
+.subtitle-linkeable{
     background: black;
-    color: aliceblue;
     text-align: center;
     text-transform: uppercase;
     padding: 15px 0px;
+    z-index: 1;
+    
 }
 
-/*
-.container-log-tit > a{
-    background: black;
-    color: aliceblue;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 15px 0px;
+.subtitle-linkeable a{
+    color: #fff;
+
 }
 
-*/
+.logo{
+   
+}
+
 .logo img{
     
-    max-width: 130px;
+    max-width: 250px;
 
 }
 
 
 .container-main{
-    display: flex;
-    flex-direction: row;
+   
     margin: 30px 5%;
 }
 
@@ -81,9 +100,8 @@ div > a{
     padding: 0.2rem 1rem;
     margin: 0px 5px;
     border: 0.2rem solid black;
-    box-shadow: 4px 4px 2px 0px rgb(0 0 0 / 45%);
+    box-shadow: 4px 4px 2px 0px rgba(0, 0, 0, 1.9);
 }
-
 
 
 .container-nav ul > li a:hover{
@@ -107,13 +125,80 @@ div > a{
 }
 
 .container-article{
-    margin-left: 5%;
-}
-.container-article h4{
-    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.container-article h5, .container-article p, .container-article div{
-    padding: 5px 35px;
+
+
+
+
+/* Card */
+
+
+
+.card{
+    position: relative;
+    background-color: (255,255,255,0.1);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+    height: 400px;
+    width: 270px;
+    margin: 5%;
+}
+
+.card:hover .gradient{
+    opacity:1;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.gradient{
+    position: absolute;
+    /* gradiente transparente */
+    background-image: linear-gradient(0deg, #009ece61 , transparent);
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.card-desc{
+    padding: 33px;
+}
+.card-title{
+    font-size: 2.2em;
+    font-weight: 700;
+}
+
+.container-footer{
+    display: flex;
+    justify-content: center;
+    border-top: 5px solid #000;
+   
+
+}
+.footer-content{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+.social{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 15px;
+
+}
+
+.container-footer .social  img{
+    max-width: 35px;
+    background: white;
 }
 
